--- a/config/item_obliterator.json5
+++ b/config/item_obliterator.json5
@@ -23,11 +23,11 @@
     "waystones:warp_plate",
     "waystones:return_scroll",
     "waystones:bound_scroll",
-    "!waystones:.*sharestone$",
+    "!waystones:.*sharestone",
     "waystones:portstone",
-    "!betterend:(.*hammer|.*head|.*handle|.*blade|.*template|.*aeternium.*|elytra_armored)$",
-    "!betterend:thallasium_(shovel|sword|pickaxe|axe|hoe|forged_plate|helmet|chestplate|leggings|boots)$",
-    "!betterend:terminite_(shovel|sword|pickaxe|axe|hoe|forged_plate)$",
+    "!betterend:(.*hammer|.*head|.*handle|.*blade|.*template|.*aeternium.*|elytra_armored)",
+    "!betterend:thallasium_(shovel|sword|pickaxe|axe|hoe|forged_plate|helmet|chestplate|leggings|boots)",
+    "!betterend:terminite_(shovel|sword|pickaxe|axe|hoe|forged_plate)",
     "things:ender_pouch",
     "camping:enderpack",
     "camping:enderbag",
@@ -35,13 +35,18 @@
     "terraqueous:ender_dust",
     "bygonenether:gilded_netherite_shield",
     "new_soviet:sickle",
-    "!new_shield_variants:(stone|iron|gold|diamond|tnt|ender)_shield$",
+    "!new_shield_variants:(stone|iron|gold|diamond|tnt|ender)_shield",
     "snowballs_plus:healthy_heart",
     "snowballs_plus:bloodthirsty_heart",
     "things:diamond_pressure_plate",
-    "!xtraarrows:.*(iron|golden|diamond|netherite).*_arrow$",
-    "!xtraarrows:flint_(atlantean|explosive|ender|gravity)_arrow$",
-    "!camping:(large|wanderer|sheep|goody)(|_)(backpack|bag)$"
+    "xtraarrows:gravity_controller",
+    "enva:glass_bowl",
+    "enva:water_glass_bowl",
+    "yummyglass:glass_shard",
+    "!enva:.*glass_helmet",
+    "!xtraarrows:.*(iron|golden|diamond|netherite).*_arrow",
+    "!xtraarrows:flint_(atlantean|explosive|ender|gravity)_arrow",
+    "!camping:(large|wanderer|sheep|goody)(|_)(backpack|bag)"
   ],
   // -----------------------------------------------------------
   // Removes an item if it contains certain nbt tag. If the whole entry (or expression) is present, the item gets removed.
