--- a/config/item_obliterator.json5
+++ b/config/item_obliterator.json5
@@ -46,7 +46,11 @@
     "botania:star_sword",
     "botania:ender_hand",
     "botania:itemfinder",
-    "botania:flight_tiara"
+    "botania:flight_tiara",
+    "!plentyofarmors:(slime|emerald)_(helmet|chestplate|leggings|boots)",
+    "botania:laputa_shard",
+    "botania:aura_ring",
+    "botania:aura_ring_greater"
   ],
   // -----------------------------------------------------------
   // Removes an item if it contains certain nbt tag. If the whole entry (or expression) is present, the item gets removed.
