--- a/config/item_obliterator.json5
+++ b/config/item_obliterator.json5
@@ -53,7 +53,9 @@
     "botania:aura_ring_greater",
     "botania:rosa_arcana",
     "!end_reborn:(end_stone|popped_chorus)_(sword|axe|pickaxe|hoe|shovel)",
-    "!end_reborn:(gilded|reinforced|forgotten|fractured|sculk|lost)_steel.*"
+    "!end_reborn:(gilded|reinforced|forgotten|fractured|sculk|lost)_steel.*",
+    "zenith:gem",
+    "zenith:gem_cutting_table"
   ],
   // -----------------------------------------------------------
   // Removes an item if it contains certain nbt tag. If the whole entry (or expression) is present, the item gets removed.
