--- a/config/zenith/enchantments.cfg
+++ b/config/zenith/enchantments.cfg
@@ -5873,7 +5873,7 @@
 
     # If this enchantment is only available by loot sources.
     # Default: true
-    B:Treasure=true
+    B:Treasure=false
 
     # If this enchantment is obtainable via enchanting and enchanted loot items.
     # Default: true
@@ -13230,7 +13230,7 @@
 
     # If this enchantment is obtainable via enchanting and enchanted loot items.
     # Default: true
-    B:Discoverable=true
+    B:Discoverable=false
 
     # If enchanted books of this enchantment are available via loot sources.
     # Default: true
