--- a/config/zenith/potion.cfg
+++ b/config/zenith/potion.cfg
@@ -42,7 +42,7 @@ general {
 brewing {
     # If this potion type will be craftable in the brewing stand.
     # Default: true
-    B:Resistance=true
+    B:Resistance=false
 
     # If this potion type will be craftable in the brewing stand.
     # Default: true
@@ -54,7 +54,7 @@ brewing {
 
     # If this potion type will be craftable in the brewing stand.
     # Default: true
-    B:Haste=true
+    B:Haste=false
 
     # If this potion type will be craftable in the brewing stand.
     # Default: true
@@ -62,7 +62,7 @@ brewing {
 
     # If this potion type will be craftable in the brewing stand.
     # Default: true
-    B:Wither=true
+    B:Wither=false
 
     # If this potion type will be craftable in the brewing stand.
     # Default: true
@@ -70,7 +70,7 @@ brewing {
 
     # If this potion type will be craftable in the brewing stand.
     # Default: true
-    B:Luck=true
+    B:Luck=false
 
     # If this potion type will be craftable in the brewing stand.
     # Default: true
@@ -82,7 +82,7 @@ brewing {
 
     # If this potion type will be craftable in the brewing stand.
     # Default: true
-    B:Levitation=true
+    B:Levitation=false
 
     # If this potion type will be craftable in the brewing stand.
     # Default: true
