--- a/config/zenith/zenith.cfg
+++ b/config/zenith/zenith.cfg
@@ -8,18 +8,18 @@
 # Report any issues found to https://github.com/TheWinABagel/Zenith/issues, not to Apotheosis!
 
 
-general {
+general { 
     # If the enchantment module is enabled.
     # Default: true
     B:"Enable Enchantment Module"=true
 
     # If the adventure module is loaded.
     # Default: true
-    B:"Enable Adventure Module"=true
+    B:"Enable Adventure Module"=false
 
     # If the spawner module is enabled.
     # Default: true
-    B:"Enable Spawner Module"=true
+    B:"Enable Spawner Module"=false
 
     # If the potion module is loaded.
     # Default: true
@@ -39,7 +39,7 @@ general {
 
     # If the Chronicle of Shadows is given to new players.
     # Default: true
-    B:"Give Book on First Join"=true
+    B:"Give Book on First Join"=false
 }
 
 
